v:0.0.70 -Boards split into custom and premade. -Edit mode links fixed. -Board display names can be specified -Edit mode has section for name and sidebar visibility -Added and linked new boards

--- a/public/styles.css
+++ b/public/styles.css
@@ -127,6 +127,12 @@ select {
   box-shadow: 0 0 0 1px black;
 }
 
+.inlineSidebar {
+  box-shadow: 0 0 0 1px black;
+  background-color: rgba(122, 117, 117, 0.788);
+
+}
+
 .sidebarButton {
   box-shadow: 0 0 0 1px black;
   width: 100%;
